css/style.css
/* ... */
#vendors .section-content .vendor-container .vendor.mamamartin .logo {
	background: url(../images/vendor_mamamartin@2x.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
}
#vendors .section-content .vendor-container .vendor.udamadea .logo {
	background: url(../images/vendor_udamadea@2x.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
}
#vendors .section-content .vendor-container .vendor.vanfotobus .logo {
	background: url(../images/vendor_vanfotobus@2x.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
}
#vendors .section-content .vendor-container .vendor.americancreeklodge .logo {
	background: url(../images/vendor_americancreeklodge@2x.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
}
#vendors .section-content .vendor-container .vendor.wildatheart .logo {
	background: url(../images/vendor_wildatheart@2x.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
}
#vendors .section-content .vendor-container .vendor.phoenix .logo {
	background: url(../images/vendor_phoenix@2x.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
}
#vendors .section-content .vendor-container .vendor.travelodge .logo {
	background: url(../images/vendor_travelodge@2x.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
}
#vendors .section-content .vendor-container .vendor h6 {
	font-weight: 600;
	color: #E39D23;
	font-size: 14px;
	text-transform: uppercase;
	margin: 15px 0 0 0;
}




/* Image Breaker - Spoon Tree */
.image-breaker.spoon-tree {
	background: url(../images/imgbreaker_spoontree@2x.png);
	background-size: cover;
	background-position: center;
	height: 625px;
}





@media screen and (max-width: 907px) and (-webkit-min-device-pixel-ratio: 1) {
	/* General */
	.section-content, .section-title .top-border {
		max-width: 650px;
		width: 100%;
		min-width: 400px;
	}
	.section-title {
		margin: 0 auto;
		width: 650px;
	}


	/* Hero */
	.hero nav.mobile-nav {
		color: #FFF;
		font-size: 40px;
		left: 0px;
		top: 0px;
		position: fixed;
		height: 50px;
		width: 50px;
		background: #E47921;
		z-index: 8888;
		cursor: pointer;
		display: block;
	}
	.hero nav.mobile-nav i {
		position: absolute;
		top: -8px;
		left: 11px;
	}
	.hero div.mobile-nav-menu {
		background: #E47921;
		width: 248px;
		height: 100vh;
		position: fixed;
		top: 0;
		z-index: 8888;
		display: none;
		box-shadow: 0px 0px 18px rgba(93, 93, 93, 0.78);
	}
	.hero .mobile-nav-menu ul {
		margin-top: 58px;
		margin-bottom: 0;
	}
	.hero .mobile-nav-menu ul li {
		display: block;
		left: 0;
	}
	.hero .mobile-nav-menu ul li a {
		margin-left: 11px;
		font-size: 88%;
		line-height: 3.5;
	}
	#menu {
		display: none !important;
	}


	/* About */
	#about .container .profile {
		margin: 0 auto;
	    max-width: 500px;
	    display: block;
	}
	#about .container .profile.april .bride.portrait, #about .container .profile.chloe .bride.portrait  {
		margin: 0 auto 0 13%;
	}
	#about .container .profile.april {
		margin-right: auto;
	}
	#about .container .profile.chloe {
		margin-top: 80px;
	}
	#about .container .profile .wedding-party {
		margin-top: 0;
	}
	#about .container .footnote .border {
	    width: 95%;
	    max-width: 650px;
	    margin: 60px auto 10px;
	}
	#about .container .footnote p {
	    width: 100%;
	    text-align: center;
	    margin-bottom: 1.5em;
	    font-size: 110%;
	}
	#about .container .footnote .legend {
	    float: none;
	    display: block;
	    margin: 0 auto;
	    width: 282px;
	}
	#about .container .footnote .legend li {
		font-size: 140%;
	}


	/* Itinerary */
	#itinerary .section-content .events {
		margin-left: 75px;
	}

	
	/* Image Breaker - Sunset Dip */
	.image-breaker.sunset-dip {
		max-height: 625px;
	    min-height: 380px;
	}


	/* Image Breaker - Sunset Gaze & Sunset Hands */
	.double-column .image-breaker.sunset-gaze {
		background-position: bottom;
		max-height: 508px;
	    min-height: 340px;
		margin: 0;
	}
	.double-column .image-breaker.sunset-hands {
		max-height: 508px;
	    min-height: 340px;
	}


	/* Accomodations */
	#accomodations {
		height: auto;
		padding-bottom: 30px;
	}
	#accomodations .section-content .suggestion {
		margin: 100px auto !important;
	    max-width: 500px;
	    min-width: 260px;
	    display: block;
	    height: auto;
	}
	#accomodations .section-content .suggestion .city-img {
		width: 300px;
		height: 300px;
	}


	/* Registry */
	#registry .image-breaker.tree {
		display: none;
	}


	/* Noteworthy */
	#noteworthy .section-content .note-container {
		margin: 45px auto;
		max-width: 650px;
		width: 100%;
		min-width: 400px;
	}
	#noteworthy .section-content .note-container .note {
	    width: 48.7%;
	}


	/* Vendors */
	#vendors .blk-02, #vendors .blk-03, #vendors .blk-05,  #vendors .blk-06, #vendors .blk-08, #vendors .blk-09, #vendors .blk-10,  #vendors .blk-012 {
		margin-left: 12%;
	}
	#vendors .blk-04, #vendors .blk-07, #vendors .blk-10 {
		margin-left: 0;
	}
	#vendors .section-content .vendor-container{
		max-width: 650px;
		width: 100%;
		min-width: 400px;
	}
}





/*
==============================================
Fade In
==============================================
*/

/* make keyframes that tell the start state and the end state of our object */
@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
/* ... */

